--- a/shop/package.json
+++ b/shop/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@nextui-org/react": "^1.0.0-beta.12"
