--- a/shop/package.json
+++ b/shop/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1"
   },
