--- a/shop/package.json
+++ b/shop/package.json
@@ -19,8 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-particles": "^2.9.3",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@nextui-org/react": "^1.0.0-beta.12"
